<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">悦读FM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">搜索</string>
    <string name="action_all">全部</string>
    <string name="action_rank">排行</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="load">加载中</string>
    <string name="title_activity_my_swipe_back">MySwipeBackActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="pref_notice_wifi">非wifi提醒</string>
    <string name="pref_auto_wifi">wifi下自动离线喜爱歌单</string>
    <string name="pref_clear_mem">立即清空缓存</string>
    <string name="pref_allow_message">接受消息推送</string>
    <string name="pref_check_version">检查版本</string>
    <string name="pref_fallback">向作者吐槽</string>
    <string name="pref_about_us">关于我们</string>

    <string name="online_retry_btn">重新加载</string>
    <string name="network_loading">加载中...</string>

    <string name="no_network_connected_toast">没有可连接的网络</string>
    <string name="load_failed">加载失败，请检查网络设置</string>
    <string name="refresh_failed">刷新失败，请检查网络设置</string>



</resources>
